@@ -1,4 +1,5 @@
 {{$NEXT}}
+-Bugfix: setting auth or query did not clear sub-attributes
 
 0.02 2018-02-20
 -Bump minimum URI::Encode::XS version to 0.07 (thanks eserte!)
